# reallife-quest-murder-game

./: .gitignore  LICENSE  README.md  init.sh  my_new_file.html  pyproject.toml  quality_assurance.sh  requirements.txt  run.sh
.github/workflows/: quality-assurance.yml
config/: players.yml  roles.yml
config/tasks/: always_preparations.yml  once_preparations.yml
example/: tasks.yml
src/: endpoints.py  init_round.py  loading.py  qr_codes.py  static_variables.py
src/static/src/: input.css  styles.css
src/static/src/scripts/: dead.js  kill.js  messages.js  notifications.js  qr_scanner.js
src/static/src/styles/: output.css
src/templates/: admin.html  base_template.html  index.html  player_info.html  players.html  successful_task.html  task_basic.html  tasks_overview.html  try_again_task.html
tests/: test_init_round.py  test_jinja_files.py  test_loading.py
tests/test_loading_config_files/: tasks.yml
